fix: left align text in form labels

--- a/app/components/irelia/form/group/index.pcss
+++ b/app/components/irelia/form/group/index.pcss
@@ -3,7 +3,7 @@
     @apply flex flex-col shadow-sm bg-white rounded p-5 relative w-full gap-y-1.5;
 
     label {
-      @apply font-bold uppercase text-sm text-irelia-primary whitespace-nowrap;
+      @apply font-bold uppercase text-sm text-irelia-primary whitespace-nowrap text-left;
     }
 
     &.irelia-form__group--invalid {
